Issue #10: expand/collapse of keyboard shortcuts better compatible with smaller screens.

--- a/css/src/styles.sass
+++ b/css/src/styles.sass
@@ -34,7 +34,6 @@ body
   #shortcut-list-wrapper
     margin-bottom: 1em
     #shortcut-list
-      overflow: hidden
       .shortcut
         @include roboto
         padding: 10px
